<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Populife</string>
    <string name="note_network_error">Network connection failed, please confirm to enable WiFi or cellular network</string>
    <string name="customer_service_email" translatable="false">support@populife.co</string>
    <string name="nav_tab_lock">Smart</string>
    <string name="nav_tab_general">Discover</string>
    <string name="nav_tab_me">Me</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_phone_num">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_pwd">Enter password</string>
    <string name="enter_new_pwd">Enter new password</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="page_action" translatable="false">action</string>
    <string name="page_title" translatable="false">title</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_pwd">Reset password</string>
    <string name="note_pwd_wrong_times">Password entered too many times. Do you forget your password?</string>
    <string name="enter_verifiction_code">Enter verification code</string>
    <string name="note_verifiction_code_invalid">Verification code is invalid</string>
    <string name="get_code">Get code</string>
    <string name="notification">Notification</string>
    <string name="message_detail">Notification detail</string>
    <string name="help_center">Help center</string>
    <string name="gateway">Gateway</string>
    <string name="settings">Settings</string>
    <string name="account">Account:\ </string>
    <string name="nick_name">Nickname</string>
    <string name="modify_pwd">Modify password</string>
    <string name="touch_id_login">Touch ID Login</string>
    <string name="switch_language">Switch language</string>
    <string name="language_system">Follow system</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_simplified_chinese" translatable="false">简体中文</string>
    <string name="language_japanese" translatable="false">日本語</string>
    <string name="language_french" translatable="false">Français</string>
    <string name="language_german" translatable="false">Deutsch</string>
    <string name="sign_out">Sign out</string>
    <string name="select_lock">Select lock</string>
    <string name="delete_account">Delete account</string>
    <string name="save">Save</string>
    <string name="lock_users">Lock users</string>
    <string name="lock_group">Lock group</string>
    <string name="other_uppercase">Other</string>
    <string name="other_lowercase">other</string>
    <string name="about">About</string>
    <string name="copyright_claim" tools:ignore="TypographyDashes">Copyright©2018-2020 Populife All Rights Reserved</string>
    <string name="common_questions">Common questions</string>
    <string name="customer_feedback">Customer feedback</string>
    <string name="online_communication">Online communication</string>
    <string name="user_manual_app">App user manual</string>
    <string name="user_manual_deadbolt">Deadbolt user manual</string>
    <string name="user_manual_keybox">Keybox user manual</string>
    <string name="user_manual_gateway">Gateway user manual</string>
    <string name="send_email">Send email</string>
    <string name="note_nickname_format">Note: no more than 20 characters</string>
    <string name="modify_nickname">Modify nickname</string>
    <string name="bind_email">Bind email</string>
    <string name="bind_phone">Bind phone</string>
    <string name="bind">Bind</string>
    <string name="current_pwd">Current password</string>
    <string name="new_pwd">New password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="note_modify_pwd_success">Modify password successfully</string>
    <string name="note_modify_pwd_fail">Modify password failed</string>
    <string name="note_current_pwd_incorrect">Current password is incorrect</string>
    <string name="note_pwd_format" tools:ignore="TypographyDashes">Password must be 6-20 characters</string>
    <string name="note_confirm_pwd">Please confirm your password</string>
    <string name="note_success_get_verification_code_phone">A verification code has been sent to your phone</string>
    <string name="note_success_get_verification_code_email">A verification code has been sent to your email</string>
    <string name="note_get_verification_code_fail">Get verification code failed</string>
    <string name="note_get_verification_code_success">Get verification code successfully</string>
    <string name="note_get_verification_code_time_limit">Verification code has been accessed too many times today, please try tomorrow</string>
    <string name="note_phone_has_been_registered">The phone number has been registered</string>
    <string name="note_email_has_been_registered">The email has been registered</string>
    <string name="note_phone_has_not_been_registered">The phone number has not been registered</string>
    <string name="note_email_has_not_been_registered">The email has not been registered</string>
    <string name="note_phone_or_pwd_incorrect">Phone number or password is incorrect</string>
    <string name="note_email_or_pwd_incorrect">Email or password is incorrect</string>
    <string name="note_phone_invalid">Phone number is invalid</string>
    <string name="note_email_invalid">Email is invalid</string>
    <string name="note_sign_in_fail">Log in failed</string>
    <string name="note_register_fail">Register failed</string>
    <string name="note_delete_account">After deleting the account, all the data will be deleted and cannot be recovered. Sure to delete?</string>
    <string name="note_reset_pwd_success">Reset password successfully</string>
    <string name="note_reset_pwd_fail">Reset password failed</string>
    <string name="note_delete_account_success">Delete account successfully</string>
    <string name="note_delete_account_fail">Delete account failed</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="note_exit">Sure to sign out?</string>
    <string name="note_clear_notifications">Sure to clear all the notifications?</string>
    <string name="clear">Clear</string>
    <string name="note_clear_notifications_success">Clear notifications successfully</string>
    <string name="note_clear_notifications_fail">Clear notifications failed</string>
    <string name="note_delete_notification">Sure to delete the notification?</string>
    <string name="note_delete_notification_fail">Delete notification failed</string>
    <string name="note_delete_feedback">Sure to delete the feedback?</string>
    <string name="note_delete_feedback_fail">Delete feedback failed</string>
    <string name="feedback">Feedback</string>
    <string name="new_feedback">New feedback</string>
    <string name="hint_feedback_input">Please input the problems you have encountered or any better suggestions. We are looking forward to hearing from you.</string>
    <string name="submit">Submit</string>
    <string name="input_something">Please input something</string>
    <string name="note_submit_feedback_fail">Submit feedback failed</string>
    <string name="no_data">No data</string>
    <string name="lock_group_add">Add new group</string>
    <string name="lock_group_modify">Modify group name</string>
    <string name="note_name_already_exists">The name already exists</string>
    <string name="note_add_group_fail">Add new group failed</string>
    <string name="on">On</string>
    <string name="turn_on">Turn On</string>
    <string name="current_mode">Current mode:</string>
    <string name="note_lock_sound_instruction">By turning ON lock sound, you can hear the sound of lock when operating, including reminding of pressing buttons, unlocking and locking, and wrong password.</string>
    <string name="maint_after_sale_process_1">After sales service process</string>
    <string name="maint_after_sale_process_2">After sales process</string>
    <string name="maint_after_sale_process_3">Launch after sales</string>
    <string name="maint_after_sale_process_4">Fill in after sales maintenance application;</string>
    <string name="maint_after_sale_process_5">Customer service confirmation</string>
    <string name="maint_after_sale_process_6">After sales customer service will contact you within two working days after receiving the 《after sales maintenance application》;</string>
    <string name="maint_after_sale_process_7">Return for repair</string>
    <string name="maint_after_sale_process_8">After confirming the after-sales service, please mail the goods to the after-sales service center within 7 days;</string>
    <string name="maint_after_sale_process_9">Important tips</string>
    <string name="maint_after_sale_process_10">Please provide valid purchase certificate;</string>
    <string name="maint_after_sale_process_11">Please do not send goods by surface mail or cod;</string>
    <string name="maint_after_sale_process_12">Contact after sales</string>
    <string name="maint_after_sale_process_13">After sales call: 400-669-1015</string>
    <string name="maint_after_sale_process_14">Service time: 7am - 10pm (holiday break)</string>
    <string name="select_write_maint_product_info">Please fill in the repair product information</string>
    <string name="select_write_maint_logistics_info">Please fill in the logistics information</string>
    <string name="label_select_product">Please select product*</string>
    <string name="label_product_equipment_number">Product equipment number*</string>
    <string name="label_problem_description">Problem description*</string>
    <string name="label_buy_info">Purchase information</string>
    <string name="hint_buy_info">(improve your purchase information to speed up processing)</string>
    <string name="hint_doc_pattern">The data format is PDF, JPG or PNG.</string>
    <string name="hint_mailing_address">After the product is repaired, it will be sent back to the following address by default. Please pay attention to the accuracy of the information</string>
    <string name="label_country">Country / Region*</string>
    <string name="please_email">Contact email*</string>
    <string name="hint_email">Please be sure to fill in the correct email address, through which we will contact you with the product maintenance instructions, delivery information and follow-up repair progress</string>
    <string name="label_area_code">Area code*</string>
    <string name="label_phone">Contact number*</string>
    <string name="label_province">Province*</string>
    <string name="label_city">City*</string>
    <string name="label_addr_detail">Address*</string>
    <string name="label_postal_code">Postcode*</string>
    <string name="hint_find_the_device_number">(how to find the device number)</string>
    <string name="payment_type">Payment method</string>
    <string name="payment_confirm">Confirm payment</string>
    <string name="maintenance_detials_1">您需要维修的产品待支付。</string>
    <string name="maintenance_detials_3">当前状态</string>
    <string name="maintenance_detials_4">保修期</string>
    <string name="maintenance_detials_5">有效</string>
    <string name="maintenance_detials_7">普通工单</string>
    <string name="maintenance_detials_8">创建日期</string>
    <string name="maintenance_detials_9">待维修产品</string>
    <string name="maintenance_detials_10">维修原因</string>
    <string name="maintenance_detials_11">检测结果</string>
    <string name="maintenance_detials_13">检测附件</string>
    <string name="maintenance_detials_14">点击下载附件</string>
    <string name="maintenance_detials_15">付费维修物料</string>
    <string name="maintenance_detials_16">维修消耗物料清单</string>
    <string name="maintenance_detials_27">PDF报价表</string>
</resources>