<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_view_titlebar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="@dimen/common_page_left_right_space"
            android:layout_marginRight="@dimen/common_page_left_right_space"
            android:layout_marginLeft="@dimen/common_page_left_right_space"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/common_text_color"
                android:text="@string/maint_after_sale_process_1"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ffee2737"
                android:text="@string/maint_after_sale_process_2"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/common_text_color"
                android:text="@string/maint_after_sale_process_3"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_4"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/common_text_color"
                android:text="@string/maint_after_sale_process_5"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_6"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/common_text_color"
                android:text="@string/maint_after_sale_process_7"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_8"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ffee2737"
                android:text="@string/maint_after_sale_process_9"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_10"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_11"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ffee2737"
                android:text="@string/maint_after_sale_process_12"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_13"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/dimens_dp_20"
                android:textColor="@color/text_color_ff0f1110"
                android:text="@string/maint_after_sale_process_14"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
