<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="16sp"
        android:textColor="@color/common_text_color"
        android:id="@+id/select_write_maint_product_info"
        android:text="@string/select_write_maint_product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/label_select_product"
        style="@style/maintenance_request_item_label" />


    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="14dp"
        android:id="@+id/product_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/label_product_equipment_number"
            android:layout_marginTop="0dp"
            style="@style/maintenance_request_item_label" />

        <TextView
            android:id="@+id/tv_find_the_device_number_btn"
            android:text="@string/hint_find_the_device_number"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_color_ffee2737"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        android:layout_marginTop="@dimen/common_edit_text_margin_top"
        app:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:text="@string/label_problem_description"
        style="@style/maintenance_request_item_label" />

    <com.populstay.populife.ui.widget.exedittext.ExEditText
        android:layout_marginTop="@dimen/common_edit_text_margin_top"
        app:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/label_buy_info"
            android:layout_marginTop="0dp"
            style="@style/maintenance_request_item_label" />

        <TextView
            android:text="@string/hint_buy_info"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/text_color_ffb1b3b6"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:text="@string/hint_doc_pattern"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/dimens_dp_10"
        android:textColor="@color/text_color_ffb1b3b6"
        android:layout_height="wrap_content"/>

</LinearLayout>
