<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical">

    <include layout="@layout/layout_view_titlebar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/note_lock_sound_instruction"
        android:textColor="@color/text_gray_medium"
        android:textSize="14sp"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_mode"
            android:textColor="@color/text_gray_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_lock_sound_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/on"
            android:textColor="@color/text_gray_dark"
            android:textSize="14sp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_lock_sound"
        style="@style/btn_style_main"
        android:layout_margin="16dp"
        android:text="@string/turn_on"/>

</LinearLayout>